<resources>
    <string name="app_name">NMedia</string>
    <string name="hmedia">HMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_favorite">Post favorite</string>
    <string name="description_post_comment">Post comment</string>
    <string name="description_post_repost">Post repost</string>
    <string name="description_post_view">Post view</string>
    <string name="description_menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="cancel_message_editing">Cancel message editing</string>
    <string name="icon_editing">Icon Editing</string>
    <string name="icon_smile">Icon Smile</string>
    <string name="chooser_share_post">Share</string>
    <string name="chooser_video_playback_application">Select video playback application</string>
    <string name="add_Post">Add post</string>
    <string name="ic_video_placeholder">Thumbnail Video</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">User %1$s posted a new post:</string>
</resources>