<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/barrier_edit"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="edit_icon, edit, old_content, cancel_edited"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="@id/cancel_edited"
        app:layout_constraintStart_toStartOf="@id/edit_icon"
        app:layout_constraintTop_toTopOf="@id/barrier_edit" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="edit, edit_icon, cancel_edited, barrier_edit" />

    <ImageView
        android:id="@+id/edit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/posts_count_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/icon_editing"
        android:src="@drawable/ic_edit_36dp"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_edit"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_spacing"
        android:layout_marginEnd="@dimen/text_spacing"
        android:background="@android:color/transparent"
        android:hint="@string/edit_message"
        android:textColorHint="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/old_content"
        app:layout_constraintEnd_toStartOf="@id/cancel_edited"
        app:layout_constraintStart_toEndOf="@id/edit_icon"
        app:layout_constraintTop_toBottomOf="@id/barrier_edit" />

    <TextView
        android:id="@+id/old_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_spacing"
        android:layout_marginEnd="@dimen/text_spacing"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:importantForAutofill="no"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@+id/cancel_edited"
        app:layout_constraintStart_toEndOf="@id/edit_icon"
        app:layout_constraintTop_toBottomOf="@id/edit" />

    <ImageButton
        android:id="@+id/cancel_edited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_icon"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_message_editing"
        android:src="@drawable/ic_close_36dp"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit"
        app:layout_constraintTop_toBottomOf="@id/barrier_edit"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="save, content, icon_smile" />

    <ImageButton
        android:id="@+id/icon_smile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/posts_count_size"
        android:layout_marginBottom="@dimen/posts_count_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/icon_smile"
        android:src="@drawable/ic_smile_42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/content"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toEndOf="@id/icon_smile"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/posts_count_size"
        android:layout_marginBottom="@dimen/edit_icon_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_favorite"
        android:src="@drawable/ic_save_fill_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content" />

</androidx.constraintlayout.widget.ConstraintLayout>